--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "use": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
